# webchat

./: .gitignore  README.md  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  run_vite_stream_check.cmd  tsconfig.json  vite.config.local.ts  vite.config.ts
backend/: .gitignore  README.md  app_stream_check.db  main.py  migrate_db.py  mock_llm_provider.py  pyproject.toml  requirements.txt  run_backend_stream_check.py  runbe.py  start_be.ps1  stream_chat_cli.py  stream_payload.json
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: attachments.py  auth.py  models.py  provider_threads.py  search.py  threads.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  common.py  message.py  model.py  provider_state.py  search.py  thread.py  user.py
backend/app/scripts/: reindex_search.py
backend/app/services/: auth.py  embeddings.py  llm.py  search_index.py  vector_store.py
backend/app/tests/: test_threads.py
backend/app/utils/: pagination.py
src/: jsx.d.ts  main.ts  types.ts
src/api/: instance.ts
src/assets/styles/: fonts.css  main.css  styles-variables.css
src/composables/: useScreenSize.ts
src/config/: api.ts  llm.ts
src/consts/: component-status.ts
src/store/: auth-store.ts  locale-store.ts
src/ui/: index.ts
src/utils/: date-is.ts  download-file.ts  entries.ts  use-toggle.ts
tmp-debug/: deepchat-history-test.html  deepchat-stream-connect-history-test.html  deepchat-stream-history-test.html  vue-deepchat-history-debug.html
(+60 files in other folders)
